# oopsla21-artifact

./: .dockerignore  .gitignore  Dockerfile  ExpDriver.py  ExpStats.py  Nader.py  README.md  README.source.md  README_unformatted.md  config.toml  genHotness.sh  lines-w-2-ui  requirements.txt  runExp.sh  shell.nix
COST/: Cargo.toml
COST/src/: lib.rs
benchmarks/: .gitignore  make_patch.py  table4.sh
benchmarks/RustPython/: Cargo.toml
benchmarks/RustPython/vm/: Cargo.toml
benchmarks/iron/: Cargo.toml
benchmarks/iron/examples/: log
benchmarks/patch/: COST.Cargo.toml  COST.bench.rs  RustPython.Cargo.toml  RustPython.test_bc.rs  swc.Cargo.toml  swc.test_bc.rs  tantivy.Cargo.toml  tantivy.test_bc.rs  warp.Cargo.toml
benchmarks/rage/: Cargo.toml
benchmarks/rage/age/: Cargo.toml
benchmarks/swc/: Cargo.toml
benchmarks/tantivy/: Cargo.toml
benchmarks/warp/: Cargo.toml
benchmarks/zola/: Cargo.toml
benchmarks/zola/test_site/public/: atom.xml  blog.css  index.html  robots.txt  sitemap.xml
benchmarks/zola/test_site/public/a-fixed-url/: index.html
benchmarks/zola/test_site/public/applying_page_template/: index.html
benchmarks/zola/test_site/public/applying_page_template/another_section/: index.html
benchmarks/zola/test_site/public/applying_page_template/another_section/post/: index.html
benchmarks/zola/test_site/public/applying_page_template/from-section-config/: index.html
benchmarks/zola/test_site/public/applying_page_template/override/: index.html
benchmarks/zola/test_site/public/applying_page_template/yet_another_section/: index.html
benchmarks/zola/test_site/public/applying_page_template/yet_another_section/post/: index.html
benchmarks/zola/test_site/public/categories/a-category/: atom.xml
benchmarks/zola/test_site/public/hello/: index.html
benchmarks/zola/test_site/public/paginated/: index.html
benchmarks/zola/test_site/public/podcast-authors/: index.html
benchmarks/zola/test_site/public/podcast-authors/some-person/: atom.xml  index.html
benchmarks/zola/test_site/public/posts/: atom.xml  index.html
benchmarks/zola/test_site/public/posts/2018/transparent-page/: index.html
benchmarks/zola/test_site/public/posts/a-post-with-dates/: index.html
benchmarks/zola/test_site/public/posts/extra-syntax/: index.html
benchmarks/zola/test_site/public/posts/no-section/simple/: index.html
benchmarks/zola/test_site/public/posts/page/2/: index.html
benchmarks/zola/test_site/public/posts/page/3/: index.html
benchmarks/zola/test_site/public/posts/page/4/: index.html
benchmarks/zola/test_site/public/posts/page/5/: index.html
benchmarks/zola/test_site/public/posts/python/: index.html
benchmarks/zola/test_site/public/posts/simple/: index.html
benchmarks/zola/test_site/public/posts/something-else/: index.html
benchmarks/zola/test_site/public/posts/top-level-alias/: index.html
benchmarks/zola/test_site/public/posts/tutorials/: index.html
benchmarks/zola/test_site/public/posts/tutorials/devops/docker/: index.html
benchmarks/zola/test_site/public/posts/tutorials/devops/nix/: index.html
benchmarks/zola/test_site/public/posts/tutorials/programming/: atom.xml  index.html
benchmarks/zola/test_site/public/posts/tutorials/programming/python/: index.html
benchmarks/zola/test_site/public/posts/tutorials/programming/rust/: index.html
benchmarks/zola/test_site/public/posts/with-assets/: index.html
benchmarks/zola/test_site/public/rebuild/first/: index.html
benchmarks/zola/test_site/public/rebuild/second/: index.html
benchmarks/zola/test_site/public/reverse-paginated/: index.html
benchmarks/zola/test_site/public/reverse-paginated/1/: index.html
benchmarks/zola/test_site/public/reverse-paginated/2/: index.html
benchmarks/zola/test_site/public/reverse-paginated/3/: index.html
benchmarks/zola/test_site/public/reverse-paginated/4/: index.html
benchmarks/zola/test_site/public/reverse-paginated/5/: index.html
benchmarks/zola/test_site/public/reverse-paginated/6/: index.html
benchmarks/zola/test_site/public/reverse-paginated/7/: index.html
benchmarks/zola/test_site/public/reverse-paginated/8/: index.html
benchmarks/zola/test_site/public/reverse-paginated/9/: index.html
benchmarks/zola/test_site/public/reverse-paginated/page/2/: index.html
benchmarks/zola/test_site/public/reverse-paginated/page/3/: index.html
benchmarks/zola/test_site/public/reverse-paginated/page/4/: index.html
benchmarks/zola/test_site/public/reverse-paginated/page/5/: index.html
benchmarks/zola/test_site/public/root-page-1/: index.html
benchmarks/zola/test_site/public/root-page-2/: index.html
brotli-expanded/: .gitignore
data/: .gitignore  README.md  config.toml  create_silesia.sh  get_LiveJournal.sh  setup_figure1.sh  setup_figure7.sh  setup_rust.sh  setup_table4.sh  silesia_gen.py
example-results/: cal.out.COST
figure1/: aggregate.py  crunch.py  result_presenter.py  tool.py
figure7/: result_presenter.py  uncover_uncheckeds.py
gecko-info/: Cargo.toml  mir-filelist
scripts/: CleanUpCal.py  ExpStats.py  Nader.py  ParseCallgrind.py  ResultPresenter.py  genHotness.sh  make_patch.py  oneGenFromSource_multifile.sh  prepareCOST.sh  regexify.py  result_presenter_fig7.py  result_presenter_figure7.py  runIron.sh  runWarp.sh  runZola.sh  table4.sh  table4_run.py  tool.py  uncover_uncheckeds.py
